--- a/MTABS/mtabs_app/templates/CalendarMonth.html
+++ b/MTABS/mtabs_app/templates/CalendarMonth.html
@@ -24,21 +24,23 @@ body {
  
 /* Sidebar Styling */
 .sidebar {
-        width: 250px;
-        background: linear-gradient(180deg, #120E34 68%, rgba(0, 0, 0, 0.7) 91%);
-        color: #fff;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-      }
+      width: 250px;
+      background: linear-gradient(180deg, #120E34 68%, rgba(0, 0, 0, 0.7) 91%);
+      color: #fff;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+    }
  
-      .sidebar img {
-        width: 80px;
-        height: auto;
-        margin-bottom: 20px;
-        border-radius: 50%;
-      }
+    .sidebar img {
+      width: 80px;
+      height: auto;
+      margin-bottom: 20px;
+      border-radius: 50%;
+      margin-right: 20px;
+    }
  
       .sidebar ul {
         list-style: none;
@@ -317,7 +319,7 @@ body {
       <li><a href="{% url 'statistics_page' %}"><span>📊</span> Statistics</a></li>
       <li><a href="{% url 'calendar_page' %}"><span>📅</span> Schedule Maker</a></li>
       <li><a href="{% url 'reminder_page' %}"><span>🔔</span> Reminders</a></li>
-      <li><a href="{% url 'settings_page' %}"><span>⚙️</span> Settings</a></li>
+      <li><a href="{% url 'update_page' %}"><span>⚙️</span> Account</a></li>
     </ul>
     <button onclick="location.href='{% url 'logout_page' %}'">Logout</button>
   </div>
